View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0032334 | Open CASCADE | OCCT:Visualization | public | 2021-04-27 12:30 | 2021-05-01 13:32 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.5.0 | ||||
Target Version | 7.6.0 | Fixed in Version | 7.6.0 | ||
Summary | 0032334: Visualization - SelectMgr_RectangularFrustum::Overlaps() does not set triangle normal in some cases | ||||
Description | SelectMgr_RectangularFrustum::Overlaps() sets triangle normal to SelectBasics_PickResult only in case of internal intersection. However, there is no reason for such selective output - computed triangle normal should be set to picking result in other cases as well. | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not required | ||||
|
Branch CR32334 has been created by kgv. SHA-1: ea3707f997b253073b27335aafaa01fc308d6683 Detailed log of new commits: Author: kgv Date: Tue Apr 27 12:31:23 2021 +0300 0032334: Visualization - SelectMgr_RectangularFrustum::Overlaps() does not set triangle normal in some cases Added missing SelectBasics_PickResult::SetSurfaceNormal(). |
|
Patch is ready for review - OCCT branch: CR32334. http://jenkins-test-12.nnov.opencascade.com:8080/view/CR32334-master-KGV/ |
|
The patch was reviewed |
|
Combination - OCCT branch : master Products branch : master was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 17839.600000000362 / 17844.450000000477 [-0.03%] Products Total CPU difference: 11562.480000000109 / 11558.800000000136 [+0.03%] Windows-64-VC14: OCCT Total CPU difference: 19303.28125 / 19431.828125 [-0.66%] Products Total CPU difference: 12894.515625 / 12871.203125 [+0.18%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR32334 has been deleted by inv. SHA-1: ea3707f997b253073b27335aafaa01fc308d6683 |
occt: master cece953c 2021-04-27 09:31:23 Committer: bugmaster Details Diff |
0032334: Visualization - SelectMgr_RectangularFrustum::Overlaps() does not set triangle normal in some cases Added missing SelectBasics_PickResult::SetSurfaceNormal(). |
Affected Issues 0032334 |
|
mod - src/SelectMgr/SelectMgr_RectangularFrustum.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2021-04-27 12:30 | kgv | New Issue | |
2021-04-27 12:30 | kgv | Assigned To | => kgv |
2021-04-27 12:31 | git | Note Added: 0100612 | |
2021-04-27 13:57 | kgv | Note Added: 0100614 | |
2021-04-27 13:57 | kgv | Assigned To | kgv => osa |
2021-04-27 13:57 | kgv | Status | new => resolved |
2021-04-27 13:58 | kgv | Relationship added | child of 0031548 |
2021-04-27 14:46 |
|
Note Added: 0100616 | |
2021-04-27 14:46 |
|
Assigned To | osa => bugmaster |
2021-04-27 14:46 |
|
Status | resolved => reviewed |
2021-05-01 12:27 | bugmaster | Note Added: 0100717 | |
2021-05-01 12:27 | bugmaster | Status | reviewed => tested |
2021-05-01 12:35 | bugmaster | Test case number | => Not required |
2021-05-01 12:44 | bugmaster | Changeset attached | => occt master cece953c |
2021-05-01 12:44 | bugmaster | Status | tested => verified |
2021-05-01 12:44 | bugmaster | Resolution | open => fixed |
2021-05-01 13:32 | git | Note Added: 0100739 |