0032334: Visualization - SelectMgr_RectangularFrustum::Overlaps() does not set triangle normal in some cases

Added missing SelectBasics_PickResult::SetSurfaceNormal().